--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,10 +1,10 @@
 .Navbar {
   display: flex;
-  align-content: center;
+  align-items: center;
 
   width: 100%;
   height: var(--navbar-height);
-  padding: 15px 20px;
+  padding: 20px;
 
   background-color: var(--inverted-bg-color);
 }
